[package]
name = "bevy_tiled_blueprints"
version = "0.1.0"
edition = "2021"
categories = ["game-development"]
description = "Allows reading tiled maps with properties"
exclude = [".github/","simple_example.png","simple_example_tiled.png"]
keywords = ["bevy", "tiled", "map"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Leinnan/bevy_tiled_blueprints"
homepage = "https://github.com/Leinnan/bevy_tiled_blueprints"
readme = "README.md"


[dependencies]
bevy = "0.14"
tiled = "0.13"
bevy_ecs_tilemap = "0.14"
thiserror = "2"
serde = {version = "1", features = ["derive"]}
ron = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
bevy-inspector-egui = "0.27.0"
bevy = { version = "0.14", features = [
    "bevy_ui",
    "bevy_asset",
    "bevy_text",
    "bevy_render",
    "file_watcher",
] }